Doc/force-app/main/default/objects/QtC_Mig_CreditMemoLines_Temp_Table__c/fields/Billing_Addressee__c.field-meta.xml
<CustomField>
    <fullName>Billing_Addressee__c</fullName>
    <label>Billing_Addressee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>