Doc/force-app/main/default/objects/QtC_Mig_CreditMemoLines_Temp_Table__c/fields/Billing_StateProvince__c.field-meta.xml
<CustomField>
    <fullName>Billing_StateProvince__c</fullName>
    <label>Billing_StateProvince</label>
    <length>255</length>
    <type>Text</type>
</CustomField>