Doc/force-app/main/default/objects/QtC_Mig_CreditMemoLines_Temp_Table__c/fields/Foreign_Amount_without_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Amount_without_Symbol__c</fullName>
    <label>Foreign Amount without Symbol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>