Doc/force-app/main/default/objects/QtC_Mig_CreditMemoLines_Temp_Table__c/fields/Invoice_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_ID__c</fullName>
    <label>Invoice Line ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>