Doc/force-app/main/default/objects/QtC_Mig_CreditMemoLines_Temp_Table__c/fields/Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Line_ID__c</fullName>
    <label>Line ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>