Doc/force-app/main/default/objects/QtC_Mig_CreditMemoLines_Temp_Table__c/fields/OSA_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>OSA_Contract_Number__c</fullName>
    <label>OSA Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>