Doc/force-app/main/default/objects/QtC_Mig_CreditMemoLines_Temp_Table__c/fields/Price_Level__c.field-meta.xml
<CustomField>
    <fullName>Price_Level__c</fullName>
    <label>Price Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>