Doc/force-app/main/default/objects/QtC_Mig_CreditMemoLines_Temp_Table__c/fields/Reference_ID_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Reference_ID_Bundle__c</fullName>
    <label>Reference ID Bundle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>