Doc/force-app/main/default/objects/QtC_Mig_CreditMemoLines_Temp_Table__c/fields/Shipping_Attention__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Attention__c</fullName>
    <label>Shipping_Attention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>