Doc/force-app/main/default/objects/QtC_Mig_CreditMemoLines_Temp_Table__c/fields/Shipping_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country_Code__c</fullName>
    <label>Shipping_Country_Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>