Doc/force-app/main/default/objects/QtC_Mig_CreditMemoLines_Temp_Table__c/fields/Subsidiary_no_hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_no_hierarchy__c</fullName>
    <label>Subsidiary no hierarchy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>