Doc/force-app/main/default/objects/QtC_Mig_CreditMemoLines_Temp_Table__c/fields/T_Amount_Without_Symbol__c.field-meta.xml
<CustomField>
    <fullName>T_Amount_Without_Symbol__c</fullName>
    <label>T_Amount_Without_Symbol</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>